[tool.poetry]
name = "parametricumap"
version = "0.1.0"
description = ""
authors = ["elad <eladr@post.bgu.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
transformers = "^4.23.1"
kaggle = "^1.5.12"
pandas = "^1.5.0"
hydra-core = "^1.2.0"
tensorflow = "^2.10.0"
scikit-learn = "^1.1.2"
umap-learn = "^0.5.3"
plotly = "^5.10.0"
numpy = "^1.23.4"
sentence-transformers = "^2.2.2"
tensorflow-text = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
